--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
   <body style="background-color:#FFFFFF; ">
     <center>
       <h4>hi speed scrub</h4>
-      <video id="my_video_1" class="video-js vjs-default-skin" preload="auto" controls="" data-setup="{}" width="320" height="180"> 
+      <video id="my_video_1" class="video-js vjs-default-skin" preload="auto" controls="" data-setup="{}" width="90%"> 
         <source src="2845.m3u8" type="application/x-mpegURL">  
       </video>
     </center>
