trying one stream to rule them all configuration

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,9 +6,16 @@
   <body style="background-color:#FFFFFF; ">
     <center>
       <h4>hi speed scrub</h4>
-      <video id="my_video_1" class="video-js vjs-default-skin" preload="auto" controls="" data-setup="{}" width="90%"> 
+      <video id="my_video_1" preload="auto" controls="" width="90%"> 
         <source src="2845.m3u8" type="application/x-mpegURL">  
       </video>
+
+      <h4>one stream file to rule them all</h4>
+      <video id="my_video_2" preload="auto" controls="" width="90%"> 
+        <source src="2845_OneStream.m3u8" type="application/x-mpegURL">  
+      </video>
+
+
     </center>
   </body>
 </html>
