added ideal hispeed scrubbing. an mp4 for reference

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,6 +15,11 @@
         <source src="2845_OneStream.m3u8" type="application/x-mpegURL">  
       </video>
 
+      <h4>ideal hi speed scrubbing, single mp4</h4>
+      <video id="my_video_2" preload="auto" controls="" width="90%"> 
+        <source src="2845_2503391.mp4" type="application/x-mpegURL">  
+      </video>
+
 
     </center>
   </body>
