--- a/views/index.erb
+++ b/views/index.erb
@@ -25,13 +25,18 @@
         <source src="2845_OneStream.m3u8" type="application/x-mpegURL">  
       </video>
 
-      <h4>one stream file to rule them all audio built in</h4>
-      <video id="my_video_2" preload="auto" controls="" width="90%"> 
+      <h4>ext iframe with one stream file to rule them all audio built in</h4>
+      <video id="my_video_3" preload="auto" controls="" width="90%"> 
         <source src="2845_mainWithAudio.m3u8" type="application/x-mpegURL">  
       </video>
 
+      <h4>apple tools created playlist</h4>
+      <video id="my_video_4" preload="auto" controls="" width="90%"> 
+        <source src="variant.m3u8" type="application/x-mpegURL">  
+      </video>
+
       <h4>ideal hi speed scrubbing, single mp4</h4>
-      <video id="my_video_2" preload="auto" controls="" width="90%"> 
+      <video id="my_video_5" preload="auto" controls="" width="90%"> 
         <source src="2845_2503391.mp4" type="application/x-mpegURL">  
       </video>
 
