apple toolchain generated separate audio and video streams are hi speed scrubbable

--- a/views/index.erb
+++ b/views/index.erb
@@ -30,9 +30,9 @@
         <source src="2845_mainWithAudio.m3u8" type="application/x-mpegURL">  
       </video>
 
-      <h4>apple tools created playlist</h4>
+      <h4>apple tools created playlist, separate audio video stream</h4>
       <video id="my_video_4" preload="auto" controls="" width="90%"> 
-        <source src="variant.m3u8" type="application/x-mpegURL">  
+        <source src="all.m3u8" type="application/x-mpegURL">  
       </video>
 
       <h4>ideal hi speed scrubbing, single mp4</h4>
