--- a/views/index.erb
+++ b/views/index.erb
@@ -4,44 +4,21 @@
     <meta name="viewport" content="width=360px; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
   </head>
   <body style="background-color:#FFFFFF; ">
+
     <center>
+
       <h4>apple tools created playlist, separate audio video stream</h4>
-      <video id="my_video_4" preload="auto" controls="" width="90%"> 
-        <source src="all.m3u8" type="application/x-mpegURL">  
+      <video id="bipbop" preload="auto" controls="" width="90%"> 
+        <source src="bipbop_16x9.m3u8" type="application/x-mpegURL">  
       </video>
 
-      <h4>ideal hi speed scrubbing, single mp4</h4>
-      <video id="my_video_5" preload="auto" controls="" width="90%"> 
-        <source src="2845_2503391.mp4" type="application/x-mpegURL">  
+<!--       <h4>test stream....</h4>
+      <video id="blah" preload="auto" controls="" width="90%"> 
+        <source src="" type="application/x-mpegURL">  
       </video>
-
-      <h4>no audio, just stream</h4>
-      <video id="my_video_0" preload="auto" controls="" width="90%"> 
-        <source src="2845_noaudio_noiframe.m3u8" type="application/x-mpegURL">  
-      </video>
-
-      <h4>ext iframe but no audio</h4>
-      <video id="my_video_0" preload="auto" controls="" width="90%"> 
-        <source src="2845_noaudio.m3u8" type="application/x-mpegURL">  
-      </video>
-
-      <h4>ext iframe with audio</h4>
-      <video id="my_video_1" preload="auto" controls="" width="90%"> 
-        <source src="2845.m3u8" type="application/x-mpegURL">  
-      </video>
-
-      <h4>one stream file to rule them all (with audio separate)</h4>
-      <video id="my_video_2" preload="auto" controls="" width="90%"> 
-        <source src="2845_OneStream.m3u8" type="application/x-mpegURL">  
-      </video>
-
-      <h4>ext iframe with one stream file to rule them all audio built in</h4>
-      <video id="my_video_3" preload="auto" controls="" width="90%"> 
-        <source src="2845_mainWithAudio.m3u8" type="application/x-mpegURL">  
-      </video>
-
-
+ -->
     </center>
+
   </body>
 </html>
 
